<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/backgound" />

        <TextView
            android:id="@+id/textViewCustomSettings"
            android:layout_width="261dp"
            android:layout_height="66dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/custom_settings"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDifficulty" />

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="137dp"
            android:layout_height="66dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerDifficulty"
            android:layout_width="348dp"
            android:layout_height="50dp"
            android:layout_marginTop="68dp"
            android:background="@color/white"
            android:entries="@array/spinner_difficulty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSettings" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="337dp"
            android:layout_height="61dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/save_and_go_menu"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextAmountOfQuestions"
            android:layout_width="173dp"
            android:layout_height="46dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:enabled="false"
            android:background="@color/white"
            android:hint="amount of questions"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCustomSettings" />

        <TextView
            android:id="@+id/textViewNumOfQuestions"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="Questions: 50"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>